--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   
   # ===== NAVIGATION =====
   go_router: ^12.1.3
+  
+  # ===== TEXT INPUT =====
+  mask_text_input_formatter: ^2.5.0
+  pin_code_fields: ^8.0.1
   page_transition: ^2.1.0
   
   # ===== FIREBASE INTEGRATION =====
@@ -123,6 +127,7 @@ dependencies:
   intl: ^0.20.2
   
   # ===== ANIMATIONS =====
+  flutter_animate: ^4.5.0
   fadingpageview: ^1.0.0
   
   # ===== AI & GEMINI INTEGRATION =====
