--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,14 +2,16 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>53407187172-0h9ckq232jev9dd2u8re190pck2kku3o.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyC8w_jXmgx2aSqrLdBdPWL8Zzl6JzFq-qE</string>
+	<string>AIzaSyAfo5qtNDVT6edPNFl6OmQ-XE5RGZeADk4</string>
 	<key>GCM_SENDER_ID</key>
 	<string>53407187172</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.hushh.agent.app</string>
+	<string>com.example.hushhAgentApp</string>
 	<key>PROJECT_ID</key>
 	<string>hushone-app</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +27,8 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:53407187172:ios:a77f9f5ee0e15396b32cf1</string>
+	<string>1:53407187172:ios:1bb8e3e3b0b6f9c2b32cf1</string>
+	<key>DATABASE_URL</key>
+	<string>https://hushone-app-default-rtdb.firebaseio.com</string>
 </dict>
-</plist> 
+</plist>
