lookbooks implementation is done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,128 +32,87 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # ===== CORE DEPENDENCIES =====
-  cupertino_icons: ^1.0.6
-  
-  # ===== STATE MANAGEMENT =====
+  # The following adds the Cupertino Icons font to your application.
+  # Use with the CupertinoIcons class for iOS style icons.
+  cupertino_icons: ^1.0.2
+
+  # State Management
   flutter_bloc: ^8.1.3
-  bloc: ^8.1.2
   equatable: ^2.0.5
-  freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
-  
-  # ===== DEPENDENCY INJECTION =====
-  get_it: ^7.6.4
-  injectable: ^2.3.2
-  
-  # ===== NAVIGATION =====
-  go_router: ^12.1.3
-  
-  # ===== TEXT INPUT =====
-  mask_text_input_formatter: ^2.5.0
-  pin_code_fields: ^8.0.1
-  page_transition: ^2.1.0
-  
-  # ===== FIREBASE INTEGRATION =====
-  firebase_core: ^3.15.2
-  firebase_auth: ^5.7.0
-  cloud_firestore: ^5.6.12
-  firebase_storage: ^12.4.10
-  firebase_messaging: ^15.2.10
-  firebase_analytics: ^11.6.0
-  firebase_crashlytics: ^4.3.10
-  firebase_performance: ^0.10.1+10
-  firebase_remote_config: ^5.5.0
-  firebase_app_check: ^0.3.2+10
-  
-  # ===== HTTP & API =====
-  dio: ^5.3.3
-  retrofit: ^4.0.3
+
+  # Http and networking
+  dio: ^5.3.2
+  http: ^1.1.0
   pretty_dio_logger: ^1.3.1
-  connectivity_plus: ^5.0.2
-  http: ^1.1.2
-  
-  # ===== LOCAL STORAGE =====
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  shared_preferences: ^2.2.2
-  
-  # ===== UI COMPONENTS =====
-  flutter_svg: ^2.0.9
+  connectivity_plus: ^4.0.2
+  retrofit: ^4.0.3
+  retrofit_generator: ^7.0.8
+
+  # Firebase
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.9.0
+  cloud_firestore: ^4.9.1
+  firebase_messaging: ^14.6.7
+  firebase_analytics: ^10.4.5
+  firebase_crashlytics: ^3.3.5
+  firebase_performance: ^0.9.2+5
+  firebase_remote_config: ^4.2.5
+  firebase_app_check: ^0.2.1+5
+
+  # UI
+  flutter_svg: ^2.0.7
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
-  lottie: ^2.7.0
+  lottie: ^2.6.0
   flutter_staggered_grid_view: ^0.7.0
-  flutter_slidable: ^3.0.1
-  pull_to_refresh: ^2.0.0
   responsive_sizer: ^3.3.0+1
-  
-  # ===== FORMS & VALIDATION =====
-  reactive_forms: ^16.1.1
-  formz: ^0.6.1
-  email_validator: ^2.1.17
-  
-  # ===== IMAGE & FILE HANDLING =====
-  image_picker: ^1.1.2
-  file_picker: ^8.1.2
-  permission_handler: ^11.3.1
-  
-  # ===== CHARTS & ANALYTICS =====
-  fl_chart: ^0.65.0
-  syncfusion_flutter_charts: ^30.1.41
-  
-  # ===== BUSINESS FEATURES =====
-  barcode_widget: ^2.0.3
-  qr_code_scanner: ^1.0.1
-  pdf: ^3.10.7
-  printing: ^5.11.1
-  excel: ^2.1.0
-  
-  # ===== CHAT & COMMUNICATION =====
-  flutter_chat_types: ^3.6.2
-  flutter_chat_ui: ^1.6.10
-  
-  # ===== LOCATION & MAPS =====
-  geolocator: ^14.0.2
-  geocoding: ^4.0.0
-  google_maps_flutter: ^2.9.0
-  location: ^8.0.1
-  
-  # ===== NOTIFICATIONS =====
-  flutter_local_notifications: ^19.4.0
-  toastification: ^3.0.3
-  
-  # ===== DATE & TIME =====
-  intl: ^0.20.2
-  
-  # ===== ANIMATIONS =====
-  flutter_animate: ^4.5.0
-  fadingpageview: ^1.0.0
-  
-  # ===== AI & GEMINI INTEGRATION =====
-  flutter_gemini: ^2.0.4
-  
-  # ===== BACKGROUND SERVICES =====
-  flutter_fgbg: ^0.3.0
-  
-  # ===== DEVICE FEATURES =====
-  device_info_plus: ^11.5.0
-  package_info_plus: ^8.3.0
-  
-  # ===== DEBUGGING & MONITORING =====
-  talker_flutter: ^3.5.2
-  wiredash: ^2.1.0
-  device_preview: ^1.1.0
-  
-  # ===== UTILITIES =====
-  uuid: ^4.2.1
-  crypto: ^3.0.3
+
+  # Local Storage
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.2.0
+
+  # Utils
+  get_it: ^7.6.4
+  injectable: ^2.3.2
+  json_annotation: ^4.8.1
   logger: ^2.0.2+1
-  url_launcher: ^6.2.1
-  receive_sharing_intent: ^1.4.5
-  
-  # ===== WEB INTEGRATION =====
-  webview_flutter: ^4.4.2
+  uuid: ^4.1.0
+  intl: ^0.18.1
+
+  # Other
+  path_provider: ^2.1.1
+  permission_handler: ^11.0.1
+  device_info_plus: ^9.1.0
+  package_info_plus: ^4.1.0
+  url_launcher: ^6.1.12
+  share_plus: ^7.1.0
+  image_picker: ^1.0.4
+  file_picker: ^6.1.1
+  go_router: ^10.1.2
+  flutter_gemini: ^2.0.3
+
+  # Charts and Visualization
+  fl_chart: ^0.63.0
+  syncfusion_flutter_charts: ^22.2.12
+
+  # Chat UI
+  flutter_chat_ui: ^1.6.8
+
+  # Location and Maps
+  geolocator: ^10.1.0
+  google_maps_flutter: ^2.5.0
+
+  # Barcode and QR Code
+  qr_code_scanner: ^1.0.1
+  barcode_widget: ^2.0.4
+
+  # PDF and Excel
+  pdf: ^3.10.4
+  excel: ^4.0.2
+
+  # Others
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
