feat: add notification bidding feature and update Firebase configuration

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>53407187172-0vdorhavj97c79l48q6pkf1j6lovapj6.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.53407187172-0vdorhavj97c79l48q6pkf1j6lovapj6</string>
 	<key>ANDROID_CLIENT_ID</key>
 	<string>53407187172-0h9ckq232jev9dd2u8re190pck2kku3o.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
@@ -11,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.hushhAgentApp</string>
+	<string>com.hushhone.hushh.agent</string>
 	<key>PROJECT_ID</key>
 	<string>hushone-app</string>
 	<key>STORAGE_BUCKET</key>
@@ -27,7 +31,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:53407187172:ios:1bb8e3e3b0b6f9c2b32cf1</string>
+	<string>1:53407187172:ios:c14ef239069bdfa4b32cf1</string>
 	<key>DATABASE_URL</key>
 	<string>https://hushone-app-default-rtdb.firebaseio.com</string>
 </dict>
