--- a/ios/Podfile
+++ b/ios/Podfile
@@ -32,6 +32,9 @@ target 'Runner' do
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
   
+  # Explicitly add Firebase/Functions for iOS
+  pod 'Firebase/Functions'
+  
   target 'RunnerTests' do
     inherit! :search_paths
   end
