--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: hushh_agent_app
-description: "Hushh Agent Application - Business management platform for agents"
+description: "Hushh Agent - Business management platform for agents"
 publish_to: 'none'
 
 version: 1.0.0+1
@@ -61,13 +61,6 @@ dependencies:
   
   # ===== UI COMPONENTS =====
   flutter_svg: ^2.0.9
-
-
-
-
-
-
-
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
   lottie: ^2.7.0
@@ -146,12 +139,14 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  flutter_launcher_icons: ^0.14.4
   
   # ===== CODE GENERATION =====
   build_runner: ^2.4.7
   freezed: ^2.4.6
   json_serializable: ^6.7.1
-  injectable_generator: ^2.4.1
+  injectable_generator: ^2.3.2
   hive_generator: ^2.0.1
   retrofit_generator: ^8.0.4
   
@@ -162,6 +157,12 @@ dev_dependencies:
   # ===== LINTING =====
   flutter_lints: ^3.0.0
 
+# App launcher icon configuration
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/Hushh agent app.png"
+
 flutter:
   uses-material-design: true
   
@@ -171,6 +172,7 @@ flutter:
     - assets/splash-anim.json
     - assets/splash.gif
     - assets/app-logo.png
+    - assets/Hushh agent app.png
   
   fonts:
     - family: Inter
@@ -185,34 +187,3 @@ flutter:
           style: italic
         - asset: assets/fonts/Figtree/Figtree-Light.ttf
           weight: 300
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
